--- a/src/main/webapp/messages_en.properties
+++ b/src/main/webapp/messages_en.properties
@@ -3,6 +3,10 @@ labels.language.pl=Polish
 labels.language.en=English
 labels.welcome.title=Welcome
 labels.cumpelstore.title=Cumpel Store
+labels.modify=Modify
+labels.return=Return
+labels.details=Details
+labels.remove=Remove
 
 ############################# Login #############################
 labels.login.title=Login
@@ -26,3 +30,6 @@ labels.customer.address.city=City
 labels.customer.address.street=Street
 labels.customer.address.houseNumber=House Number
 labels.customer.address.zipcode=Zip Code
+labels.customer.avatar=Avatar
+labels.customer.registrationDate= Registration Date
+labels.login.enabled=Enabled
